--- a/templates/component/_header.html.twig
+++ b/templates/component/_header.html.twig
@@ -21,7 +21,13 @@
         {% endif %}
     </ul>
     {% if app.user  %}
-        <span class="text-white"> Bonjour {{ app.user.pseudo? app.user.pseudo : app.user.firstname ~' '~ app.user.lastname}}</span>
+        <a href="{{ path("profil_show", {id: app.user.id}) }}" class="w-25 text-center">
+            {% if app.user.profilPhoto is not null%}
+                <img src="{{ vich_uploader_asset(app.user, 'profilPhotoFile') | imagine_filter('avatar_thumb') }}" alt="{{ app.user.profilPhoto }}" class="avatar-testimony">
+            {% else %}
+                <span class="text-white text-wrap"> Bonjour {{ app.user.pseudo? app.user.pseudo : app.user.firstname ~' '~ app.user.lastname}}</span>
+            {% endif %}
+        </a>
     {% endif %}
     <a class="navbar-brand" href="{{ path("home") }}">
         <img src="{{ asset(defaultLogo) }}" alt="Logo KYOSC" class="logo">
