--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -65,6 +65,7 @@
             <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
         </div>
     </section>
+    <!-- section challenges -->
     <section class="home-section home-challenges align-items-center hide-before-scroll show-on-scroll">
         {% if topChallenge %}
         <div class="homeTopSelection home-cartouche">
@@ -74,9 +75,11 @@
                     <p class="title-date-card text-center bg-dark text-white m-0">{{ topChallenge.dateStart |format_datetime(pattern="dd MMMM Y",locale='fr') }}</p>
                     <div class="position-relative">
                         {% if topChallenge.challengePhoto is not null %}
-                            <img src="{{ vich_uploader_asset(topChallenge, 'challengePhotoFile') | imagine_filter('challenge_thumb') }}" alt="photo du challenge" class="w-100">
+                            <img src="{{ vich_uploader_asset(topChallenge, 'challengePhotoFile') | imagine_filter('challenge_thumb') }}"
+                                 alt="photo du challenge" class="w-100 challenge-photo-container">
                         {% else %}
-                            <img src="{{ asset('uploads/challenge/challenge-default.jpeg') }}" alt="photo par défaut du challenge" class="w-100">
+                            <img src="{{ asset('uploads/challenge/challenge-default.jpeg') }}"
+                                 alt="photo par défaut du challenge" class="w-100 challenge-photo-container">
                         {% endif %}
                     </div>
                     <div class="card-body home-challenge p-2">
@@ -99,9 +102,11 @@
                                href="{{ path("challenge_show", {id: challenge.id}) }}">
                                 <div class="position-relative">
                                     {% if challenge.challengePhoto is not null %}
-                                        <img src="{{ vich_uploader_asset(challenge, 'challengePhotoFile') | imagine_filter('challenge_thumb') }}" alt="photo du challenge" class="w-100">
+                                        <img src="{{ vich_uploader_asset(challenge, 'challengePhotoFile') | imagine_filter('challenge_thumb') }}"
+                                             alt="photo du challenge" class="w-100 challenge-photo-container">
                                     {% else %}
-                                        <img src="{{ asset('uploads/challenge/challenge-default.jpeg') }}" alt="photo par défaut du challenge" class="w-100">
+                                        <img src="{{ asset('uploads/challenge/challenge-default.jpeg') }}"
+                                             alt="photo par défaut du challenge" class="w-100 challenge-photo-container">
                                     {% endif %}
                                 </div>
                                 <div class="card-body p-1">
@@ -122,8 +127,61 @@
             <a href="{{ path("challenge_index") }}" class="button-discover btn-lg">Je découvre</a>
         </div>
     </section>
-    <section class="home-section testimonials hide-before-scroll show-on-scroll">
-        <div class="home-cartouche show-on-scroll hide-before-scroll">
+    <!-- section clans -->
+    <section class="home-section home-challenges align-items-center hide-before-scroll show-on-scroll">
+        {% if topClan %}
+            <div class="homeTopSelection home-cartouche">
+                <figure>
+                    <a class="card text-decoration-none text-dark h-100 no-bg-border"
+                       href="{{ path("clan_show", {id: topClan.id}) }}">
+                        <div class="position-relative">
+                            {% if topClan.banner is not null %}
+                                <img src="{{ vich_uploader_asset(topClan, 'bannerFile') | imagine_filter('challenge_thumb') }}"
+                                     alt="photo du clan" class="w-100 challenge-photo-container">
+                            {% else %}
+                                <img src="{{ asset('uploads/challenge/challenge-default.jpeg') }}"
+                                     alt="photo par défaut du clan" class="w-100 challenge-photo-container">
+                            {% endif %}
+                        </div>
+                        <div class="card-body home-challenge p-2">
+                            <h5 class="card-title text-center text-uppercase">{{ topClan.name }}</h5>
+                        </div>
+                    </a>
+                    <figcaption class="home-figcaption text-selection">À LA UNE</figcaption>
+                </figure>
+            </div>
+        {% endif %}
+        {% if clans %}
+            <div class="homeSelection home-cartouche hide-before-scroll show-on-scroll">
+                <figure>
+                    <div class="container-fluid">
+                        <div class="row justify-content-center">
+                            {% for clan in clans %}
+                                <div class="col-12 col-sm-6 p-3 position-relative">
+                                    <a class="card text-decoration-none text-dark h-100 no-bg-border"
+                                       href="{{ path("clan_show", {id: clan.id}) }}">
+                                        <div class="position-relative">
+                                            {% if clan.banner is not null %}
+                                                <img src="{{ vich_uploader_asset(clan, 'bannerFile') | imagine_filter('challenge_thumb') }}"
+                                                     alt="photo du clan" class="w-100 challenge-photo-container">
+                                            {% else %}
+                                                <img src="{{ asset('uploads/challenge/challenge-default.jpeg') }}"
+                                                     alt="photo par défaut du clan" class="w-100 challenge-photo-container">
+                                            {% endif %}
+                                        </div>
+                                        <div class="card-body p-1">
+                                            <h5 class="card-title text-center">{{ clan.name }}</h5>
+                                        </div>
+                                    </a>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <figcaption class="home-figcaption text-selection">NOTRE SELECTION</figcaption>
+                </figure>
+            </div>
+        {% endif %}
+        <div class="all-projects home-cartouche show-on-scroll hide-before-scroll text-center">
             <span id="all-projects">TOUS LES CLANS</span>
             <a href="{{ path("clan_index") }}"><img class="home-multi-universes" src="{{ asset('build/images/logo/team.jpg') }}"></a>
             <a href="{{ path("clan_index") }}" class="button-discover btn-lg">Je découvre</a>
