--- a/assets/styles/homepage.scss
+++ b/assets/styles/homepage.scss
@@ -60,6 +60,48 @@
     }
 }
 
+.home-square-box {
+    height: 50vw;
+
+    @include md {
+        height: 25vw;
+    }
+}
+
+.home-square-box:hover {
+    opacity: 0.9;
+}
+
+.home-all-links {
+
+    @include md {
+        font-size: 2em;
+    }
+
+    @include xl {
+        font-size: 3em;
+    }
+
+    @include xxl {
+        font-size: 4em;
+    }
+}
+
+.home-new-links {
+
+    @include md {
+        font-size: 1.8em !important;
+    }
+
+    @include xl {
+        font-size: 2.4em !important;
+    }
+
+    @include xxl {
+        font-size: 3em !important;
+    }
+}
+
 .second-color-title {
     color: theme-color-level('homeSecondColor');
 }
@@ -226,6 +268,14 @@
     @include md {
         margin: 5px 20px;
         width: 30%;
+    }
+
+    @include lg {
+        width: 35%;
+    }
+
+    @include xl {
+        width: 40%;
     }
 }
 
