--- a/templates/clan/my-clan.html.twig
+++ b/templates/clan/my-clan.html.twig
@@ -20,7 +20,7 @@
         <div class="row justify-content-center justify-content-md-around">
             <div class="col-lg-6 transparent-background-dark p-3">
                 <h2 class="challenge-quotation mb-4">Description du clan</h2>
-                <p class="challenge-description">{{ clan.description }}</p>
+                <p class="challenge-description pre-line">{{ clan.description }}</p>
             </div>
         </div>
     </section>
@@ -33,7 +33,7 @@
                 {% if message.isPublic == false %}
                     <div class="{% if app.user == message.author %}align-self-end text-right{% endif %} position-relative">
                         <div class="m-3 bubble {% if app.user == message.author %}bubble-bottom-right{% else %}bubble-bottom-left{% endif %}">
-                            <p>{{ message.content }}</p>
+                            <p class="pre-line">{{ message.content }}</p>
                             {% if app.user %}
                                 {% if is_granted("ROLE_ADMIN") or app.user == message.author or app.user == clan.creator %}
                                     {{ include('message/_delete_form.html.twig') }}
