--- a/templates/profil/show.html.twig
+++ b/templates/profil/show.html.twig
@@ -105,6 +105,9 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="form-check d-flex align-items-center mt-0 py-5 flex-row flex-wrap justify-content-center background-grey w-100">
+                        <div class="col-12 col-lg-6 p-3 d-flex justify-content-center">
+                            <button type="submit" class="btn-login btn btn-lg">Enregistrer</button>
+                        </div>
                         {% for category in categories %}
                             <div class="d-flex flex-column align-items-center w-100 mt-2 mx-5 pt-2 transparent-background-dark">
                                 <h3 class="text-center" style="color: {{ category.color }}"><img src="/uploads/logo/{{ category.logo }}" class="home-carousel-logo"> Univers {{ category.name }}</h3>
@@ -128,6 +131,9 @@
                                 </div>
                             </div>
                         {% endfor %}
+                        <div class="col-12 col-lg-6 p-3 d-flex justify-content-center">
+                            <button type="submit" class="btn-login btn btn-lg">Enregistrer</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -153,6 +159,9 @@
                             {{ form_widget(form.brandSuggestion) }}
                             {{ form_errors(form.brandSuggestion) }}
                         </div>
+                        <div class="col-12 col-lg-6 p-3 d-flex justify-content-center align-self-center">
+                            <button type="submit" class="btn-login btn btn-lg">Enregistrer</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -170,6 +179,9 @@
                             {{ form_help(form.favoriteDestination) }}
                             {{ form_widget(form.favoriteDestination) }}
                             {{ form_errors(form.favoriteDestination) }}
+                        </div>
+                        <div class="col-12 col-lg-6 p-3 d-flex justify-content-center align-self-center">
+                            <button type="submit" class="btn-login btn btn-lg">Enregistrer</button>
                         </div>
                     </div>
                 </div>
