closing cross inside challenge new modals

--- a/templates/challenge/new.html.twig
+++ b/templates/challenge/new.html.twig
@@ -52,6 +52,9 @@
                                         {% endif %}
                                     {% endfor %}
                                 </div>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true"><img src="{{ asset('build/images/picto/close.png') }}" class="close-picto m-2" alt="white closing cross"></span>
+                                </button>
                             </div>
                         </div>
                     </div>
