HomePage -> black banners above challenge and clan section

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -65,6 +65,12 @@
             <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
         </div>
     </section>
+    <div class="bg-dark d-flex justify-content-center hide-before-scroll show-on-scroll">
+        <div class="w-75 text-center text-light p-3">
+            <h2>Les aventures</h2>
+            <p class="h5">Rejoignez ou créez des aventures sportives, en solo ou avec vos clans !</p>
+        </div>
+    </div>
     <!-- section challenges -->
     <section class="row mx-0">
         {% for challenge in featuredChallenges %}
@@ -119,6 +125,12 @@
             </a>
         {% endfor %}
     </section>
+    <div class="bg-dark d-flex justify-content-center hide-before-scroll show-on-scroll">
+        <div class="w-75 text-center text-light p-3">
+            <h2>Les clans</h2>
+            <p class="h5">Rejoignez ou créez des clans, partagez et échangez autour de vos aventures !</p>
+        </div>
+    </div>
     <!-- section clans -->
     <section class="row mx-0">
         {% for clan in clans %}
