--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -218,7 +218,7 @@
     </div>
     <div class="w-75 mx-auto my-5 participants transparent-background-dark p-3">
         <h2>Commentaires</h2>
-        <div class="d-flex flex-column w-100 scroll-comment">
+        <div class="d-flex flex-column-reverse w-100 scroll-comment comment-space">
             {% if challenge.messages|length >= 1 %}
                 {% for message in challenge.messages|reverse %}
                     {% if message.isPublic %}
@@ -246,7 +246,7 @@
         </div>
         {% if app.user %}
             <h3 class="mt-3">Ajoutez un commentaire !</h3>
-            {{ form_start(form) }}
+            {{ form_start(form, {'attr': {'id': 'commentForm'}}) }}
             {{ form_widget(form) }}
             {{ form_end(form) }}
         {% endif %}
