--- a/templates/clan/show.html.twig
+++ b/templates/clan/show.html.twig
@@ -118,7 +118,7 @@
     </div>
     <div class="w-75 mx-auto my-5 participants transparent-background-dark p-3">
         <h2>Commentaires</h2>
-        <div class="d-flex flex-column w-100 scroll-comment">
+        <div class="d-flex flex-column-reverse w-100 scroll-comment comment-space">
             {% if clan.messages|length >= 1 %}
                 {% for message in clan.messages|reverse %}
                     {% if message.isPublic %}
@@ -148,7 +148,7 @@
         </div>
         {% if app.user %}
             <h3 class="mt-3">Ajoutez un commentaire !</h3>
-            {{ form_start(form) }}
+            {{ form_start(form, {'attr': {'id': 'commentForm'}}) }}
             {{ form_widget(form) }}
             {{ form_end(form) }}
         {% endif %}
