FAQ updated with link in header and home. cookies halo suppressed. Better display for errors in challenge new form. city non mandatory on registration (adress) with setters corrected. new classes for bg and opacity. New button 'ok' to exit modals in challenge new

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -64,6 +64,22 @@ body {
     color: theme-color-level('kblue');
 }
 
+.bg-kgreen {
+    background-color: theme-color-level('kgreen');
+}
+
+.bg-kblue {
+    background-color: theme-color-level('kblue');
+}
+
+.opacity-100 {
+    opacity: 1;
+}
+
+.opacity-50 {
+    opacity: 0.5;
+}
+
 .logo {
     height: auto;
     width: 60px;
