--- a/templates/about/faq.html.twig
+++ b/templates/about/faq.html.twig
@@ -1,10 +1,78 @@
 {% extends 'base.html.twig' %}
-{% block title%}FAQ{% endblock %}
-
-{% block background %}
-    class="background-profile" style="background: url('{{ asset('build/images/background/bgimg' ~ random(1, 11) ~ '.jpeg') }}') no-repeat fixed center; background-size: cover;"
-{% endblock %}
+{% block title%}Aide / FAQ{% endblock %}
 
 {% block body %}
-    <h1 class="arrow-header">Foire aux questions</h1>
+    <section class="d-flex flex-column align-items-center">
+        <h1 class="my-5 arrow-header">Aide / Foire aux questions</h1>
+        <div class="my-5 p-4 w-75 transparent-background-dark d-flex flex-column justify-content-center align-items-center hide-before-scroll show-on-scroll">
+            <h2>Bien démarrer sur KYOSC</h2>
+            <p>Pour bien démarrer, l'idéal est de commencer par completer votre profil :</p>
+            <a class="bg-kgreen btn text-uppercase text-white mb-3" href="{{ path("profil_my_profil") }}">Mon Espace</a>
+            <div class="text-justify">
+                <p class="pre-line">En effet, un profil complété permet d'être mieux identifié par les autres utilisateur·trice·s
+                    et ainsi d'enrichir votre expérience sur la plateforme.
+                    Parmi les informations que nous recueillons, certaines sont visibles par les autres membres du site :</p>
+                <ul>
+                    <li>Pseudo : Remplace votre prénom / nom dans la plupart des pages du site</li>
+                    <li>Biographie : Permet aux autres utilisateur·trice·s d'en apprendre plus sur vous et vos centres d'intérêts</li>
+                    <li>Témoignage : Vous permet d'exprimer votre ressenti quant à l'utilisation de la plateforme</li>
+                    <li>Photo de profil : Permet de plus facilement vous identifier</li>
+                    <li>Sports préférés : Permet de mieux cibler les sports susceptibles de vous intéresser</li>
+                </ul>
+                <p class="pre-line">D'autres informations sont quant à elles uniquement visibles par vous et les administrateurs du site.
+                    Ces données peuvent alors nous servir dans des cas bien particuliers :</p>
+                <ul>
+                    <li>Age : Uniquement utilisé dans le cadre de notre analyse de l'utilisation du site</li>
+                    <li>Adresse : Nous permet de vous faire parvenir des récompenses ou autres gains dans le cadre de notre démarche de "gamification"</li>
+                    <li>Mail : Nous permet de vous contacter et de nous assurer que chaque utilisateur·trice·s est unique</li>
+                </ul>
+                <p class="pre-line">Enfin, d'autres informations nous permettrons de mieux comprendre comment faire évoluer la plateforme :</p>
+                <ul>
+                    <li>Marques préférées : Marques de sport favorites</li>
+                    <li>Destinations préférées : Destinations favorites pour pratiquer un ou des sport·s</li>
+                </ul>
+            </div>
+        </div>
+        <div class="my-5 p-4 w-75 transparent-background-dark d-flex flex-column justify-content-center align-items-center hide-before-scroll show-on-scroll">
+            <h2>Rejoindre ou créer un clan</h2>
+            <p class="pre-line">Afin de profiter au maximum de l'expérience KYOSC, nous vous conseillons de rejoindre voir de créer un clan.
+            Les clans permettent de regrouper des ami·e·s autour d'aventures, dans un espace dédié.
+            Vous pouvez alors échanger et facilement programmer vos prochaines sorties sportives.</p>
+            <div>
+                <a href="{{ path('clan_index') }}" class="bg-kblue btn text-uppercase text-white mx-2 mb-3">Tous les clans</a>
+                <a href="{{ path('clan_new') }}" class="bg-kgreen btn text-uppercase text-white mx-2 mb-3">Créer un clan</a>
+            </div>
+            <div class="text-justify">
+                <p class="pre-line">En tant que membre d'un clan, vous pouvez acceder à un espace interne à celui-ci, une zone privée à laquele seul les membres du clan ont accès.
+                Vous pouvez rejoindre autant de clans que vous le souhaitez, du moment que ceux-ci sont "ouverts" ou que vous avez été invité à le·s rejoindre. Dans les deux cas, c'est le créateur·trice du clan qui pourra décider de vous laisser entrer ou non. Il est donc important lorsque vous décidez de rejoindre un clan, d'assortir votre demande d'un message pour vous présenter et expliquer vos motivations.
+                Vous pouvez également créer vos propre clans. Vous devrez alors les nommmer et les décrire, et vous pouvez les personnaliser avec une photo (ce qui est conseillé pour permettre de les retrouver facilement). A tout moment vous pouvez décider de supprimer vos clan. En tant que créateur·trice de clan, vous pourrez inviter des personnes à le rejoindre, via l'envoi d'un mail. Le destinataire devra alors suivre le lien qui lui sera envoyé et se créer ou avoir un compte pour valider l'invitation. En tant que créateur·trice, vous avez également pouvoir de modération sur le contenu apporté par les membres de votre clan (messages, photos, vidéos). Nous vous invitons donc à surveiller (et donc supprimer) tout contenu susceptible d'aller à l'encontre des conditions exprimées dans nos <a href="{{ path('cgu') }}">CGU</a>.</p>
+            </div>
+        </div>
+        <div class="my-5 p-4 w-75 transparent-background-dark d-flex flex-column justify-content-center align-items-center hide-before-scroll show-on-scroll">
+            <h2>Rejoindre ou créer une aventure</h2>
+            <p class="pre-line">Le coeur de l'expérience KYOSC : les aventures !
+            En solo, entre amis, avec vos clans ou avec d'autres utilisateur·trice·s de la plateforme, à vous de créer ou de choisir l'aventure qui vous ressemble</p>
+            <div>
+                <a href="{{ path('challenge_index') }}" class="bg-kblue btn text-uppercase text-white mx-2 mb-3">Toutes les aventures</a>
+                <a href="{{ path('challenge_new') }}" class="bg-kgreen btn text-uppercase text-white mx-2 mb-3">Créer une aventure</a>
+            </div>
+            <div class="text-justify">
+                <p class="pre-line">Vous pouvez rejoindre autant d'aventures que vous le souhaitez, du moment que celles-ci sont "ouvertes" ou que vous avez été invité à le·s rejoindre. Dans les deux cas, c'est le créateur·trice de l'aventure qui pourra décider de vous laisser entrer ou non. Il est donc important lorsque vous décidez de rejoindre une aventure, d'assortir votre demande d'un message pour vous présenter et expliquer vos motivations.
+                    Vous pouvez également créer vos propres aventures. Vous devrez alors renseigner plusieurs informations :</p>
+                <ul>
+                    <li>Titre : Le titre que vous souhaitez donner à votre aventure</li>
+                    <li>Citation qualifiante (optionnelle) : Une phrase d'accroche pouvant donner envie à d'autres personnes de rejoindre votre aventure</li>
+                    <li>Date : La date à laquelle se déroule votre aventure</li>
+                    <li>Image (optionnelle) : Une photo / image illlustrant votre aventure</li>
+                    <li>Description : La teneur de votre aventure, dans les détails</li>
+                    <li>Lieu de départ : Le point de rendez-vous pour le début de votre aventure</li>
+                    <li>Distance (optionnelle) : La distance approximative qui sera parcourue lors de votre aventure</li>
+                    <li>Clan (optionnelle) : Vous pouvez indiquer avec quel·s clan·s vous souhaitez partager votre aventure. Il vous faut faire partie du ou des clan·s en question. Votre aventure apparaitra alors dans la page de ce·s clan·s</li>
+                    <li>Informations pratiques (optionnelle) : Toutes autres informations de nature à faciliter l'organisation de votre aventure (heure, etc.). Evitez toutefois d'inscrire vos coordonnées personnelles (téléphone / adresse / etc.)</li>
+                    <li>Ouvert à tous : Option vous permettant de décider si d'autres utilisateurs·trices peuvent demander à rejoindre votre aventure. En laissant l'option décochée, seul vous serez en mesure d'inviter des personnes à rejoindre votre aventure. Si vous cochez cette option, un bouton permettra aux autres utilisateurs·trices de faire une demande d'accès</li>
+                </ul>
+                <p>. A tout moment vous pouvez décider de supprimer votre aventure. En tant que créateur·trice d'une aventure, vous pourrez inviter des personnes à la rejoindre, via l'envoi d'un mail. Le destinataire devra alors suivre le lien qui lui sera envoyé et se créer ou avoir un compte pour valider l'invitation. En tant que créateur·trice, vous avez également pouvoir de modération sur le contenu apporté par les participants à votre aventure (messages, photos, vidéos). Nous vous invitons donc à surveiller (et donc supprimer) tout contenu susceptible d'aller à l'encontre des conditions exprimées dans nos <a href="{{ path('cgu') }}">CGU</a>.</p>
+            </div>
+        </div>
+    </section>
 {% endblock %}
