--- a/templates/component/_header.html.twig
+++ b/templates/component/_header.html.twig
@@ -9,16 +9,19 @@
             {% endif %}
         {% endif %}
         <li> <a href="{{ path("home") }}">Accueil</a> </li>
-        <li> <a href="{{ path("challenge_index") }}">Les aventures</a> </li>
-        <li> <a href="{{ path("clan_index") }}">Les clans</a> </li>
         {% if app.user %}
             <li> <a href="{{ path("profil_my_profil") }}">Mon espace</a> </li>
+            <li> <a href="{{ path("challenge_index") }}">Les aventures</a> </li>
             <li> <a href="{{ path("challenge_new") }}">Nouvelle aventure</a> </li>
+            <li> <a href="{{ path("clan_index") }}">Les clans</a> </li>
             <li> <a href="{{ path("clan_new") }}">Nouveau clan</a> </li>
             <li> <a href="{{ path("app_logout") }}">Déconnexion</a> </li>
         {% else %}
+            <li> <a href="{{ path("challenge_index") }}">Les aventures</a> </li>
+            <li> <a href="{{ path("clan_index") }}">Les clans</a> </li>
             <li> <a href="{{ path("app_login") }}">Se connecter</a> </li>
         {% endif %}
+        <li> <a href="{{ path("faq") }}">Aide</a> </li>
     </ul>
     {% if app.user  %}
         <a href="{{ path("profil_my_profil") }}" class="w-25 text-center">
